--- a/src/xushan.html
+++ b/src/xushan.html
@@ -49,7 +49,7 @@
 
          		}
          		.piece-1 {
-         			background: url('./assert/xh1.jpeg');
+         			background: url('../assert/xh1.jpeg');
       background-size: contain;
          	        -webkit-transform: rotateY(0deg) translateZ(173.2px);
          	        -ms-transform: rotateY(0deg) translateZ(173.2px);
@@ -64,7 +64,7 @@
 
          		}
          		.piece-2 {
-         			background: url('./assert/xh2.jpeg');
+         			background: url('../assert/xh2.jpeg');
       background-size: contain;
          	        -webkit-transform: rotateY(60deg) translateZ(173.2px);
          	        -ms-transform: rotateY(60deg) translateZ(173.2px);
@@ -78,7 +78,7 @@
             			 animation-fill-mode: forwards;
          		}
          		.piece-3 {
-         			background: url('./assert/xh3.jpeg');
+         			background: url('../assert/xh3.jpeg');
       background-size: contain;
          	        -webkit-transform: rotateY(120deg) translateZ(173.2px);
          	        -ms-transform: rotateY(120deg) translateZ(173.2px);
@@ -92,7 +92,7 @@
             			 animation-fill-mode: forwards;
          		}
          		.piece-4 {
-         			background: url('./assert/xh4.jpeg');
+         			background: url('../assert/xh4.jpeg');
          background-size: contain;
          	        -webkit-transform: rotateY(180deg) translateZ(173.2px);
          	        -ms-transform: rotateY(180deg) translateZ(173.2px);
@@ -106,7 +106,7 @@
             			 animation-fill-mode: forwards;
          		}
          		.piece-5 {
-         			background: url('./assert/xh5.jpeg');
+         			background: url('../assert/xh5.jpeg');
       background-size: contain;
 
 
